Fixed: the top margin was too big

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,3 @@
 .tab-content {
-    margin-top: 100px;
+    margin-top: 50px;
 }
